; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dummy-frame.c_deprecated_read_register_dummy.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dummy-frame.c_deprecated_read_register_dummy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regcache = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @deprecated_read_register_dummy(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.regcache*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call %struct.regcache* @deprecated_find_dummy_frame_regcache(i32 %10, i32 %11)
  store %struct.regcache* %12, %struct.regcache** %8, align 8
  %13 = load %struct.regcache*, %struct.regcache** %8, align 8
  %14 = icmp ne %struct.regcache* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %3
  %16 = load %struct.regcache*, %struct.regcache** %8, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @regcache_cooked_read_unsigned(%struct.regcache* %16, i32 %17, i32* %9)
  %19 = load i32, i32* %9, align 4
  store i32 %19, i32* %4, align 4
  br label %21

20:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %21

21:                                               ; preds = %20, %15
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local %struct.regcache* @deprecated_find_dummy_frame_regcache(i32, i32) #1

declare dso_local i32 @regcache_cooked_read_unsigned(%struct.regcache*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
